--- a/Dockerfile.spark__
+++ b/Dockerfile.spark__
@@ -1,22 +1,38 @@
-FROM openjdk:8-jdk-alpine
-ENV SBT_VERSION=1.3.2
+FROM debian:stretch
 
-RUN \
-  echo "$SCALA_VERSION $SBT_VERSION" && \
-  apk add --no-cache bash curl git unzip vim && \
-  apk add python3=3.6.8-r2 && \
-  python3 -m pip install -U pip && \
-  pip3 install py4j
+RUN apt-get update \
+ && apt-get install -y locales \
+ && dpkg-reconfigure -f noninteractive locales \
+ && locale-gen C.UTF-8 \
+ && /usr/sbin/update-locale LANG=C.UTF-8 \
+ && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen \
+ && locale-gen \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/*
 
-RUN \
-  curl -fsL https://github.com/sbt/sbt/releases/download/v$SBT_VERSION/sbt-$SBT_VERSION.tgz | tar xfz - -C /usr/local && \
-  $(mv /usr/local/sbt-launcher-packaging-$SBT_VERSION /usr/local/sbt || true) && \
-  ln -s /usr/local/sbt/bin/* /usr/local/bin/ && \
-  sbt sbtVersion
+# Users with other locales should set this in their derivative image
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
 
+RUN apt-get update \
+ && apt-get install -y gcc curl unzip git vim \
+    python3 python3-setuptools \
+ && ln -s /usr/bin/python3 /usr/bin/python \
+ && easy_install3 pip py4j \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/*
+
+# http://blog.stuart.axelbrooke.com/python-3-on-spark-return-of-the-pythonhashseed
 ENV PYTHONHASHSEED 0
 ENV PYTHONIOENCODING UTF-8
 ENV PIP_DISABLE_PIP_VERSION_CHECK 1
+
+# JAVA
+RUN apt-get update \
+ && apt-get install -y openjdk-8-jre \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/*
 
 # HADOOP
 ENV HADOOP_VERSION 2.8.5
@@ -45,4 +61,3 @@ RUN curl -sL --retry 3 \
 
 WORKDIR $SPARK_HOME
 CMD ["bin/spark-class", "org.apache.spark.deploy.master.Master"]
-
