--- a/Dockerfile.spark
+++ b/Dockerfile.spark
@@ -1,12 +1,12 @@
 FROM openjdk:8-jdk-alpine
-ENV SBT_VERSION=1.3.2
+ENV SBT_VERSION=1.3.5
 
 RUN \
-  echo "$SCALA_VERSION $SBT_VERSION" && \
-  apk add --no-cache bash curl git unzip vim && \
-  apk add python3=3.6.8-r2 && \
+  apk add --no-cache build-base libffi-dev openssl-dev krb5-dev linux-headers zeromq-dev && \
+  apk add --no-cache bash curl git unzip vim gcc g++ libzmq && \
+  apk add python3=3.6.9-r2 python3-dev=3.6.9-r2 && \
   python3 -m pip install -U pip && \
-  pip3 install py4j
+  pip3 install py4j pyzmq
 
 RUN \
   curl -fsL https://github.com/sbt/sbt/releases/download/v$SBT_VERSION/sbt-$SBT_VERSION.tgz | tar xfz - -C /usr/local && \
