--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     hostname: spark-worker
     environment:
       SPARK_CONF_DIR: /playground/conf/spark_worker
-      SPARK_WORKER_CORES: 14
+      SPARK_WORKER_CORES: 6
       SPARK_WORKER_MEMORY: 30g
       SPARK_WORKER_PORT: 8881
       SPARK_WORKER_WEBUI_PORT: 8081
@@ -49,9 +49,11 @@ services:
   spark-submit:
     build: .
     image: spark-playground
-    # command: echo dot
-    command: jupyter notebook --port=9000 --no-browser --ip=0.0.0.0 --allow-root
+    command: pyspark
     environment:
+      PYSPARK_DRIVER_PYTHON: jupyter
+      PYSPARK_DRIVER_PYTHON_OPTS: notebook --port=9000 --no-browser --ip=0.0.0.0 --allow-root
+      PYSPARK_PYTHON: python3
       SPARK_CONF_DIR: /playground/conf/spark_submit
       SPARK_PUBLIC_DNS: localhost
     ports:
